--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -15,6 +15,10 @@
   color: var(--text-color);
 }
 
+.overlap-order p {
+  z-index: 1;
+}
+
 .warning-btn {
   width: 300px;
   height: 40px;
@@ -35,9 +39,13 @@
   background-size: cover;
 }
 
+.flame {
+  height: 800px;
+}
+
 .main-container {
   background-image: image-url('tamari_ba_top.png');
-  height: 800px;
+  height: 100%;
   width: 100%;
   background-size: cover;
 }
@@ -50,7 +58,7 @@
     right: 0;
     top: 0;
     background: rgba(0, 0, 0, 0.4);
-    height: 800px;
+    height: 100%;
 }
 
 .feature-image {
