--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,23 +1,25 @@
 <!-- Masthead-->
-<div class="main-container overlay">
-  <div class="container px-4 px-lg-5 h-100">
-    <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
-      <div class="col-lg-8 align-self-end">
-          <h1 class="title-text">Tamari-Ba</h1>
-          <hr class="divider" />
-      </div>
-      <div class="col-lg-8 align-self-baseline">
-          <p class="sub-text">Tamari-Baは全国のバイク乗りのおすすめスポットを投稿するWEBアプリ。<br>バイク乗りのTamari-Baで自分の好きな峠、シーサイド、道の駅などについて語ろう。</p>
-          <% if user_signed_in? %>
-            <%= link_to "アプリトップへ", roads_path, class: "btn warning-btn" %>
-          <% else %>
-            <div class="my-3">
-              <%= link_to "ログインはこちら", user_session_path, class: "btn warning-btn" %>
-            </div>
-            <div class="my-3">
-              <%= link_to "ゲストログイン(採用担当者様)", users_guest_sign_in_path, method: :post, class: "btn warning-btn" %>
-            </div>
-          <% end %>
+<div class="flame">
+  <div class="main-container overlay">
+    <div class="container px-4 px-lg-5 h-100">
+      <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
+        <div class="col-lg-8 align-self-end">
+            <h1 class="title-text">Tamari-Ba</h1>
+            <hr class="divider" />
+        </div>
+        <div class="col-lg-8 align-self-baseline">
+            <p class="sub-text">Tamari-Baは全国のバイク乗りのおすすめスポットを投稿するWEBアプリ。<br>バイク乗りのTamari-Baで自分の好きな峠、シーサイド、道の駅などについて語ろう。</p>
+            <% if user_signed_in? %>
+              <%= link_to "アプリトップへ", roads_path, class: "btn warning-btn" %>
+            <% else %>
+              <div class="my-3">
+                <%= link_to "ログインはこちら", user_session_path, class: "btn warning-btn" %>
+              </div>
+              <div class="my-3">
+                <%= link_to "ゲストログイン(採用担当者様)", users_guest_sign_in_path, method: :post, class: "btn warning-btn" %>
+              </div>
+            <% end %>
+        </div>
       </div>
     </div>
   </div>
