--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,9 @@
         <%= render 'layouts/header' %>
       <% end %>
     </header>
-    <%= render "layouts/flash" %>
-    <%= yield %>
+    <div class="overlap-order">
+      <%= render "layouts/flash" %>
+      <%= yield %>
+    </div>
   </body>
 </html>
