--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -35,7 +35,6 @@
     color: #002550;
     border: 1.5px solid #FFED00;
   }
-  
 }
 
 input[type="text"] {
@@ -51,6 +50,32 @@ input[type="email"] {
 input[type="password"] {
   width: 300px;
   height: 40px;
+}
+
+.form-class {
+  margin: 0 auto;
+}
+
+@media only screen and (max-width:  575px) {
+  input[type="text"] {
+    width: 100%;
+    height: 40px;
+  }
+  
+  input[type="email"] {
+    width: 100%;
+    height: 40px;
+  }
+  
+  input[type="password"] {
+    width: 100%;
+    height: 40px;
+  }
+
+  .execute-btn {
+    width: 100%;
+    height: 40px;
+  }
 }
 
 .forgot-link {
